--- a/Examples/test-suite/python/Makefile.in
+++ b/Examples/test-suite/python/Makefile.in
@@ -59,6 +59,7 @@ CPP_TEST_CASES += \
 	python_abstractbase \
 	python_append \
 	python_director \
+	python_enum_strong_scoped \
 	python_nondynamic \
 	python_overload_simple_cast \
 	python_richcompare \
